force-app/main/default/objects/Lead/fields/First_No_Touch_Pro_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_No_Touch_Pro_Purchase_Date__c</fullName>
    <formula>BI_Data__r.First_No_Touch_Pro_Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First No Touch Pro Purchase Date</label>
    <type>DateTime</type>
</CustomField>