force-app/main/default/objects/Lead/fields/First_Owner_Assigned_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_Owner_Assigned_Timestamp__c</fullName>
    <description>MIS-2381</description>
    <label>First Owner Assigned Timestamp</label>
    <type>DateTime</type>
</CustomField>