force-app/main/default/objects/Lead/fields/First_PPC_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_PPC_Timestamp__c</fullName>
    <description>MIS-4138</description>
    <label>First PPC Timestamp</label>
    <type>DateTime</type>
</CustomField>