force-app/main/default/objects/Lead/fields/First_Pro_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pro_Purchase_Date__c</fullName>
    <label>First Pro Purchase Date</label>
    <type>Date</type>
</CustomField>