force-app/main/default/objects/Lead/fields/First_Purchase_Success_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase_Success_Date__c</fullName>
    <label>First Purchase Success Date</label>
    <type>DateTime</type>
</CustomField>