force-app/main/default/objects/Lead/fields/First_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Registration_Date__c</fullName>
    <description>MIS-4080</description>
    <label>First Registration Date</label>
    <type>Date</type>
</CustomField>