force-app/main/default/objects/Lead/fields/First_Visit_Page__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Page__c</fullName>
    <label>First Visit Page</label>
    <type>Url</type>
</CustomField>