force-app/main/default/objects/Lead/fields/Fit_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_2__c</fullName>
    <formula>BI_Data__r.FIT_Score2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fit Score 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>