force-app/main/default/objects/Lead/fields/Fit_Score_Counter__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fit Score Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>