force-app/main/default/objects/Lead/fields/Fit_Score_Estimation_Ops__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_Estimation_Ops__c</fullName>
    <formula>IF(FIND(BLANKVALUE(TEXT(CountryCode),&apos;00&apos;),&apos;,SY,IR,PS,LB,IQ,KP&apos;,0)&gt;0,&quot;F&quot;,IF((NOT(FIND(BLANKVALUE(TEXT(SW_Industry__c),&apos;00&apos;),&apos;,Hedge Fund,Hedge Funds and Asset Management,Private Equity,Venture Capital &amp; Private Equity,VC and Private Equity,Private Equity and Venture Capital,Venture Capital,Venture Capital &amp; Private Equity,Equity Research,Investors,Ent Investors&apos;,0)&gt;0 ||CONTAINS(BLANKVALUE(LOWER(ROE_Division__c),&apos;00&apos;),&apos;investors&apos;) ||CONTAINS(BLANKVALUE(LOWER(TEXT(Department__c)),&apos;00&apos;),&apos;investment&apos;) ||CONTAINS(LOWER(BLANKVALUE(TEXT(Business_Unit__c),&apos;00&apos;)),&apos;strat&apos;))),IF((CONTAINS(LOWER(BLANKVALUE(TEXT(Use_of_Similarweb__c),&apos;00&apos;)),&apos;school&apos;) ||CONTAINS(LOWER(BLANKVALUE(Title,&apos;00&apos;)),&apos;student&apos;) ||FIND(&apos;.....&apos;,SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(Clean_Domain__c),&apos;.student&apos;,&apos;.....&apos;),&apos;student.&apos;,&apos;.....&apos;),&apos;.ac.&apos;,&apos;.....&apos;),&apos;.edu&apos;,&apos;.....&apos;),&apos;edu.&apos;,&apos;.....&apos;),&apos;students.&apos;,&apos;.....&apos;),&apos;tcd.ie&apos;,&apos;.....&apos;),&apos;umail.ucc.ie&apos;,&apos;.....&apos;))&gt;0 ||LOWER(Department_Other_Description__c)=&apos;education - student&apos;),&apos;S&apos;,IF(AND(CONTAINS(LOWER(TEXT(Use_of_Similarweb__c)),&apos;personal&apos;),NOT(FIND(TEXT(CountryCode),&apos;,US,FR,CN,JP,ES,IT,CA,IL,AU,HK,PR,SG,SE,TH,&apos;)&gt;0)) ||(OR(CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;publishers and media&apos;),CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;retail&apos;),CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;classifieds&apos;),CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;b2c internet services&apos;),CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;travel&apos;),CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;other&apos;),CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;telecom&apos;),CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;pharma&apos;),CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;automotive&apos;),CONTAINS(LOWER(TEXT(SW_Industry__c)),&apos;education&apos;)) &amp;&amp; BLANKVALUE(SI_Enrichment_Visits__c,0) &lt;=50000) ||AND(OR(FIND(LOWER(TEXT(CountryCode)),&apos;,pk,ng,bd,tn,lk,bo,br,cr,cu,do,gt,hn,ni,pa,pe,py,sv,uy,ve,mn,ma,ng,eg,dz,ke,tn,gh,et,cm,bj,ci,tz,ao,ug,zw,sn,ly,so,mu,mz,mg,re,rw,tg,zm,cd,bf,bw,na,mr,ga,ml,gn,sl,mw,gm,cg,sz,sc,cv,dj,ls,ne,bi,gq,gw,st,td,lr,er&apos;,0)&gt;0,BLANKVALUE(Employees_Min__c,0) &lt;=10,AND(TEXT(CountryCode)=&apos;IN&apos;,(BLANKVALUE(Employees_Min__c,0) &lt;=200 ||NOT(CONTAINS(LOWER(TEXT(Email_address_domain_type__c)),&apos;company&apos;) ||NOT(ISBLANK(LinkedIn_Profile__c)) ||LinkedIn_leadsource__c=TRUE))),AND(NOT(OR(CONTAINS(LOWER(BLANKVALUE(TEXT(Email_address_domain_type__c),&apos;00&apos;)),&apos;company&apos;),NOT(ISBLANK(LinkedIn_Profile__c)),LinkedIn_leadsource__c=TRUE)),Website=&apos;no_website&apos;)),NOT(FIND(LOWER(TEXT(Seniority__c)),&apos;,vp/director,c-suite&apos;,0)&gt;0 &amp;&amp; BLANKVALUE(Employees_Min__c,0)&gt;50 &amp;&amp; NOT(TEXT(CountryCode)=&apos;IN&apos; &amp;&amp; BLANKVALUE(Employees_Min__c,0) &lt;=200))) || NOT(CONTAINS(LOWER(BLANKVALUE(TEXT(Email_address_domain_type__c),&apos;00&apos;)),&apos;company&apos;) ||NOT(ISBLANK(LinkedIn_Profile__c)) ||LinkedIn_leadsource__c=TRUE),&apos;E&apos;,IF((TEXT(CountryCode)=&apos;&apos;||FIND(LOWER(TEXT(CountryCode)),&apos;,uu,xx,&apos;,0)&gt;0),&apos;X&apos;,&apos;A-D&apos;))),IF((TEXT(CountryCode)=&apos;&apos;||FIND(LOWER(TEXT(CountryCode)),&apos;,uu,xx,&apos;,0)&gt;0),&apos;X&apos;,&apos;A-D&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fit Score Estimation Ops</label>
    <type>Text</type>
</CustomField>