force-app/main/default/objects/Lead/fields/Fit_Score_Test__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_Test__c</fullName>
    <label>Fit Score Test</label>
    <length>5</length>
    <type>Text</type>
</CustomField>