force-app/main/default/objects/Lead/fields/Force_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Force_Enrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Enrichment</label>
    <type>Checkbox</type>
</CustomField>