force-app/main/default/objects/Lead/fields/Force_FitScore_Calc__c.field-meta.xml
<CustomField>
    <fullName>Force_FitScore_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-5558</description>
    <label>Force FitScore Calc</label>
    <type>Checkbox</type>
</CustomField>