force-app/main/default/objects/Lead/fields/Form_Location_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Location_URL__c</fullName>
    <label>Form Location URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>