force-app/main/default/objects/Lead/fields/Form_Submission_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Date_and_Time__c</fullName>
    <label>Form Submission Date and Time</label>
    <type>DateTime</type>
</CustomField>