force-app/main/default/objects/Lead/fields/fr_Last_Interesting_Date__c.field-meta.xml
<CustomField>
    <fullName>fr_Last_Interesting_Date__c</fullName>
    <formula>BI_Data__r.Last_Interesting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BI Data: Last Interesting Date</label>
    <type>DateTime</type>
</CustomField>