force-app/main/default/objects/Lead/fields/fr_strategic_pod__c.field-meta.xml
<CustomField>
    <fullName>fr_strategic_pod__c</fullName>
    <formula>TEXT( Strategic_Pod__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fr_strategic pod</label>
    <type>Text</type>
</CustomField>