force-app/main/default/objects/Lead/fields/Fro_Type__c.field-meta.xml
<CustomField>
    <fullName>Fro_Type__c</fullName>
    <label>Fro Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital Marketing - Free Trial</fullName>
            </value>
            <value>
                <fullName>FRO - After Trial</fullName>
            </value>
            <value>
                <fullName>FRO Trial AI</fullName>
            </value>
            <value>
                <fullName>FRO Trial - Investors</fullName>
            </value>
            <value>
                <fullName>FRO Trial - Marketing</fullName>
            </value>
            <value>
                <fullName>FRO Trial MI</fullName>
            </value>
            <value>
                <fullName>FRO Trial - Research</fullName>
            </value>
            <value>
                <fullName>FRO Trial - Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Registration - Transit</fullName>
            </value>
            <value>
                <fullName>Research Solution - Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>