force-app/main/default/objects/Lead/fields/Google_App_MAU__c.field-meta.xml
<CustomField>
    <fullName>Google_App_MAU__c</fullName>
    <label>Google App MAU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>