force-app/main/default/objects/Lead/fields/Groudon_Company_Domains__c.field-meta.xml
<CustomField>
    <fullName>Groudon_Company_Domains__c</fullName>
    <description>MIS-7697
Data is populated through Groudon, from SI, on lead creation or any new activity that triggers Groudon</description>
    <label>Groudon Company Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>