force-app/main/default/objects/Lead/fields/Groudon_Enrichment_fields__c.field-meta.xml
<CustomField>
    <fullName>Groudon_Enrichment_fields__c</fullName>
    <label>Groudon_Enrichment_fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>