force-app/main/default/objects/Lead/fields/Groudon_Pred_Reason__c.field-meta.xml
<CustomField>
    <fullName>Groudon_Pred_Reason__c</fullName>
    <description>MIS-7760


Enrichment: New field from Groudon</description>
    <label>Groudon Pred Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>