force-app/main/default/objects/Lead/fields/Has_an_app__c.field-meta.xml
<CustomField>
    <fullName>Has_an_app__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-7233</description>
    <label>Company has an app?</label>
    <type>Checkbox</type>
</CustomField>