force-app/main/default/objects/Lead/fields/How_Did_You_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Us__c</fullName>
    <description>MIS-4995</description>
    <label>How Did You Hear About Us</label>
    <length>255</length>
    <type>Text</type>
</CustomField>