force-app/main/default/objects/Lead/fields/How_Did_You_Hear_About_Us_Description__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Us_Description__c</fullName>
    <description>MIS-4995</description>
    <label>How Did You Hear About Us Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>