force-app/main/default/objects/Lead/fields/Incomplete_queue__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_queue__c</fullName>
    <description>a system field used to identify which leads are in the incomplete queue to exclude them from duplicate rule</description>
    <label>Incomplete queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>