force-app/main/default/objects/Lead/fields/Industry_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Industry_Other_Description__c</fullName>
    <label>Industry Other Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>