force-app/main/default/objects/Lead/fields/Inferred_Solution_From_Web__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Solution_From_Web__c</fullName>
    <description>Populated by the Web team and passed through Pardot</description>
    <label>Inferred Solution From Web</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NULL</fullName>
                <default>true</default>
                <label>NULL</label>
            </value>
            <value>
                <fullName>Marketing (MI)</fullName>
            </value>
            <value>
                <fullName>research</fullName>
            </value>
            <value>
                <fullName>investors</fullName>
            </value>
            <value>
                <fullName>marketing</fullName>
            </value>
            <value>
                <fullName>sales</fullName>
            </value>
            <value>
                <fullName>web-solution</fullName>
            </value>
            <value>
                <fullName>shopper-solution</fullName>
            </value>
            <value>
                <fullName>sales-solution</fullName>
            </value>
            <value>
                <fullName>app-solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>