force-app/main/default/objects/Lead/fields/Initial_Contact_Date_Wolves__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Date_Wolves__c</fullName>
    <label>Initial Contact Date</label>
    <type>Date</type>
</CustomField>