force-app/main/default/objects/Lead/fields/Intent_Score_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Feedback__c</fullName>
    <description>MIS-4061</description>
    <label>Intent Score - Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>