force-app/main/default/objects/Lead/fields/Intent_Score_Feedback_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Feedback_Snapshot__c</fullName>
    <description>MIS-4159 - Updates when Feedback is changed</description>
    <label>Intent Score - Feedback Snapshot</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>