force-app/main/default/objects/Lead/fields/Intent_Score_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Last_Updated_Date__c</fullName>
    <formula>BI_Data__r.Intent_Score_Last_Updated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intent Score - Last Updated Date</label>
    <type>Date</type>
</CustomField>