force-app/main/default/objects/Lead/fields/Intent_Score_Reason__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Reason__c</fullName>
    <description>MIS-4061</description>
    <formula>BI_Data__r.Intent_Score_Reason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intent Score - Reason</label>
    <type>Text</type>
</CustomField>