force-app/main/default/objects/Lead/fields/Intent_Score_Top_Values__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Top_Values__c</fullName>
    <description>MIS-4286</description>
    <label>Intent Score - Top Values</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>