force-app/main/default/objects/Lead/fields/Interested_in_Affiliate_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Affiliate_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Affiliate Marketing</label>
    <type>Checkbox</type>
</CustomField>