force-app/main/default/objects/Lead/fields/Interested_in_General__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_General__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Interested in General</label>
    <type>Checkbox</type>
</CustomField>