force-app/main/default/objects/Lead/fields/Interested_in_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Mobile</label>
    <type>Checkbox</type>
</CustomField>