force-app/main/default/objects/Lead/fields/Interested_in_PPC__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_PPC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in PPC</label>
    <type>Checkbox</type>
</CustomField>