force-app/main/default/objects/Lead/fields/Internal_Rank__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rank__c</fullName>
    <description>The Lead Qualification rank based on our algorithm</description>
    <label>Internal Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>