force-app/main/default/objects/Lead/fields/Is_Distribution_Handled__c.field-meta.xml
<CustomField>
    <fullName>Is_Distribution_Handled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A technical field that helps marketing cloud distribution</description>
    <label>Is Distribution Handled</label>
    <type>Checkbox</type>
</CustomField>