force-app/main/default/objects/Lead/fields/Is_Groudon_Quiz_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Groudon_Quiz_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical field for Groudon system</description>
    <label>Is Groudon Quiz Complete</label>
    <type>Checkbox</type>
</CustomField>