force-app/main/default/objects/Lead/fields/is_proactive__c.field-meta.xml
<CustomField>
    <fullName>is_proactive__c</fullName>
    <formula>BI_Data__r.is_proactive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProActive</label>
    <type>Checkbox</type>
</CustomField>