force-app/main/default/objects/Lead/fields/Job_Title_Current_Source__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Current_Source__c</fullName>
    <label>Job Title Current Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>